2009.11, Not yet released:

	Toolchain: ARM cortex A8 support, GCC 4.4.2.

	New packages: divine, gvfs, libarchive, libmicrohttpd,
	sdl_sound, swfdec, sysstat

	Updated/fixed packages: autoconf, busybox, gcc, directfb, dnsmasq,
	e2fsprogs, festival, gstreamer, gst-plugins-bad, gst-plugins-base,
	gst-plugins-good, imagemagick, ipkg, iptables, kernel-headers, kismet,
	libelf, libevent, libglib2, libidn, liblockfile, libmad, libpcap,
	libupnp, libuuid, lighttpd, ltrace, lua, lzma, mdadm, ncftp, ncurses,
	netkittelnet, netsnmp, ntfs-3g, openntp, openssl, php, python,
	quagga, radvd, rsync, samba, sawman, shared-mime-info, speech-tools,
	sqlite, squashfs, synergy, syslinux, tcpdump, u-boot, util-linux,
	valgrind, vsftpd, wipe

	wpa-supplicant, xdata_xcursor-themes, zlib

	Removed package: mdnsresponder, mpatrol, gcc 3.4.6 + 4.0.4

	Issues resolved (http://bugs.uclibc.org):

	#301: allow to install libsmbclient
	#303: add gvfs package
	#477: Add sdl_sound package
	#487: Make kismet package sexier
	#511: New package usb_modeswitch
	#527: misc fixes for dnsmasq package
	#565: libevent: Bump version and clean up makefile
	#587: Use iptables multipurpose binaries and bump to 1.4.4
	#593: Missing early check for patch(1)
	#609: libmicrohttpd: New package
	#615: python: Don't delete .py files unless asked
	#617: netkit/inetd requires RPC and fails to build if RPC is disabled
	#619: netkittelnet requires netkitbase to install, but there's no dependency
	#653: [SECURITY] Update php package to version 5.2.11
	#655: Update sqlite package to version 3.6.18
	#657: Bug in imagemagick-clean target
	#665: [PATCH] Samba package
	#667: [PATCH] e2fsprogs
	#703: [SECURITY] Update openssl package to 0.9.8l
	#709: Bump lighttpd package to 1.4.24
	#713: Migrate openntpd package to Makefile.autotools.in
	#715: Bump libidn package to 1.15 and other fixes
	#717: Bump dnsmasq to 2.51 and introduce new IDN option

2009.08, Released August 31th, 2009:

	Additional fixes and cleanups.
